[fix] fix #23 Fix broken dark mode in Firefox

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -1,8 +1,8 @@
 html {
-    background-color: #ebebeb !important;
+    background-color: #141414 !important;
 }
 
-html {
+body {
 filter: invert(100%) hue-rotate(180deg);
 }
 
